<resources>
    <string name="app_name">Belanjan</string>
    <string name="name">Belanjan</string>
    <string name="currency">Rp.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="txtCredits"><a href="http://www.google.com">Google</a></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_terms">Terms &amp; Privacy</string>

    <!-- string.xml -->
    <string name="nav_home">Berbelanja sekarang</string>
    <string name="nav_user">Pengguna</string>
    <string name="nav_order">pesananku</string>
    <string name="nav_profile">Profil saya</string>
    <string name="nav_support">Support</string>
    <string name="nav_about">Tentang kami</string>
    <string name="nav_review">Tinjau Kami</string>
    <string name="nav_contact">Hubungi kami</string>
    <string name="nav_share">Bagikan dengan Temans</string>
    <string name="nav_logout">Keluar</string>

    <!-- activity_login.xml -->
    <string name="et_login_phone_hint">Nomor Telp. (Wajib)</string>
    <string name="tv_login_email">Email (Wajib)</string>
    <string name="tv_login_password">Password (Wajib)</string>
    <string name="btn_login">Masuk</string>
    <string name="btn_send">Bagikan</string>
    <string name="tv_login_note">Sebelum melanjutkan dengan aplikasi, Anda harus memverifikasi nomor ponsel Anda. Sistem kami akan mengirimi Anda kode OTP pada nomor ponsel yang terdaftar</string>

    <!-- activity_register.xml -->
    <string name="tv_reg">Daftar</string>
    <string name="tv_reg_name_hint">Nama (Wajib)</string>
    <string name="tv_reg_pincode">Kode Pos (Wajib)</string>
    <string name="tv_reg_socity">Kecamatan(Wajib)</string>
    <string name="btn_reg_socity_choose">Pilih Kecamatan ...</string>
    <string name="tv_reg_house">House Number(Wajib)</string>
    <string name="btn_reg_update">Update Profile</string>
    <string name="et_reg_search">Pilih Kecamatan ...</string>
    <string name="tv_reg_note">Note : service available for RAJKOT only</string>
    <string name="tv_reg_address">Alamat(Wajib)</string>
    <string name="et_reg_address">Alamat Lengkap</string>

    <!-- fragment_cart.xml -->
    <string name="tv_cart_title">Keranjang</string>
    <string name="tv_cart_clear">Bersihkan Semua Produk</string>
    <string name="tv_cart_checkout">Continue Checkout</string>
    <string name="tv_cart_total">Total:\u0020</string>
    <string name="tv_cart_item">Items:\u0020</string>
    <string name="tv_cart_rs">\u0020Rp</string>

    <!-- fragment_delivery_time.xml -->
    <string name="tv_del_title">Tanggal / Waktu Pengiriman</string>
    <string name="tv_del_address">Alamat Pengiriman</string>
    <string name="et_del_address_hint">Masukkan Alamat Pengiriman..</string>
    <string name="tv_del_continue">Lanjutkan Dengan Waktu</string>
    <string name="tv_del_date">Pilih Tanggal Pengiriman</string>
    <string name="tv_del_time">Pilih Waktu Pengiriman</string>
    <string name="tv_del_date_time">Tanggal / Waktu Pengiriman</string>
    <string name="tv_total_item_amount">Total Item dan Jumlah</string>
    <string name="tv_total_total">Total Jumlah </string>

    <!-- fragment_home.xml -->
    <string name="tv_home_cat">Produk</string>
    <string name="tv_home_view">Lihat Semua ></string>

    <!-- fragment_Wallet.xml -->
    <string name="tv_app_name">Dompet</string>
    <!-- fragment_Reward.xml -->
    <string name="tv_toolbar_name">Rewards</string>
    <!-- row_product_rv.xml -->
    <string name="tv_pro_add">Add</string>
    <string name="tv_pro_update">Update</string>
    <string name="tv_pro_price">Harga per\u0020</string>
    <string name="tv_pro_rs">\u0020Rp.\u0020</string>
    <string name="tv_pro_total">Total: </string>

    <!-- fragment_confirm_order.xml -->
    <string name="tv_conf_order_title">Rincian Pembayaran</string>

    <!-- fragment_my_order_detail.xml -->
    <string name="tv_order_cancle">Batalkan pesanan</string>
    <string name="tv_order_summery">Ringkasan</string>
    <string name="tv_order_total">Total: Rp.</string>
    <string name="tv_order_qty">Qty</string>
    <string name="tv_order_rs">Rp.</string>

    <!-- fragment_order_thanks.xml -->
    <string name="tv_thanks_title">Terima kasih atas pesananmu.</string>
    <string name="tv_thanks_home">Lanjutkan home</string>
    <string name="tv_thanks_order">Lacak pesanan saya</string>

    <!-- Forgot password -->
    <string name="forgot">Lupa kata sandi ?</string>

    <!-- Code message and concat  string -->
    <string name="my_order">Pesananku</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delivery">Pengiriman</string>
    <string name="delivery_date">"Tanggal pengiriman: </string>
    <string name="please_select_date">Silakan pilih tanggal</string>
    <string name="no_rcord_found">Tidak ada catatan yang ditemukan</string>
    <string name="connection_time_out">Waktu koneksi habis</string>
    <string name="add_delivery_address">Tambahkan Alamat Pengiriman</string>
    <string name="order_now">Pesan sekarang</string>
    <string name="payment_detail">Rincian Pembayaran</string>
    <string name="delivery_time">Waktu pengiriman</string>
    <string name="please_enter_pincode">Silakan masukkan kode PIN</string>
    <string name="receiver_mobile_number">Nomor Ponsel Penerima(Diperlukan)</string>
    <string name="receiver_name_req">Nama Penerima (Diperlukan)</string>
    <string name="phone_too_short">Ponsel Terlalu pendek</string>
    <string name="please_add_address">Silakan tambahkan alamat</string>
    <string name="please_select_address">Silakan pilih alamat</string>
    <string name="please_select_date_time">Silakan pilih tanggal dan waktu</string>
    <string name="profile_updated">Profil diperbarui</string>
    <string name="uploading_profile_data">Mengunggah data profil</string>
    <string name="cancle_order_note">Anda yakin!  Anda ingin membatalkan pesanan?</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="thank_you">Terima kasih</string>
    <string name="payment">Pembayaran</string>
    <string name="password_too_short">Kata Sandi Terlalu Singkat</string>
    <string name="invalide_email_address">Alamat email salah</string>
    <string name="no_internet">Maaf! Tidak terhubung ke internet</string>
    <string name="order_no">No. Pesanan:\u0020</string>
    <string name="pending">Menunggu keputusan</string>
    <string name="confirm">Konfirmasi</string>
    <string name="delivered">Terkirim</string>
    <string name="outfordeliverd">Siap di Antarkan / Menuju Lokasi</string>
    <string name="cancle">Batal</string>
    <string name="date">Tanggal:\u0020</string>
    <string name="time">Waktu:\u0020</string>
    <!--Method String-->
    <string name="method_one">PickUP</string>
    <string name="method_two">COD</string>
    <string name="method_three">Cards</string>
    <string name="method_four">NetBanking</string>

    <string name="search_msg">Cari Sayuran, Buah, dll</string>
    <string name="change_password">Ganti kata sandi</string>
    <string name="old_password">Kata Sandi Lama (Diperlukan)</string>
    <string name="new_password">Kata Sandi Baru (Diperlukan)</string>
    <string name="confirm_password">Konfirmasi Kata Sandi (Diperlukan)</string>
    <string name="password_not_same">Konfirmasi Kata Sandi dan Kata Sandi Baru tidak sama.</string>
    <string name="delivery_charge">Ongkos kirim.:\u0020</string>
    <string name="amount">Jumlah:\u0020</string>
    <string name="search_here">Cari di sini...</string>
    <string name="total_amount">Jumlah total:\u0020</string>
    <string name="search">Pencarian</string>
    <string name="enter_keyword">Harap Masukkan Kata Kunci</string>
    <string name="delete">Menghapus</string>
    <string name="edit">Edit</string>
    <string name="description">Deskripsi:</string>

    <!-- row_delivery_time.xml -->
    <string name="tv_deli_socity">Kecamatan:</string>
    <string name="tv_deli_mobile">No Hp.:</string>
    <string name="tv_deli_pin">Kode PIN:</string>

    <!-- delivery_payment_detail_fragment.java -->
    <string name="tv_deli_pay_ontime">Tepat waktu :\u0020</string>
    <string name="tv_deli_pay_address">Alamat:\u0020</string>

    <!-- delivery_get_address_adapter.java -->
    <string name="reciver_name">Nama Penerima:\u0020</string>
    <string name="reciver_mobile">No Telp Penerima:\u0020</string>
    <string name="pincode">Kode PIN:\u0020</string>
    <string name="house_no">No Rumah:\u0020</string>
    <string name="socity">Kecamatan:\u0020</string>

    <string name="status_stop"><font color='green'>Belanjan.com</font></string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Maps2Activity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_peta">Peta</string>
</resources>
