<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.belanjan.RegisterActivity">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_5"
            android:id="@id/contentPanel"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">
            <!--<FrameLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--app:layout_behavior="@string/appbar_scrolling_view_behavior" android:layout_marginBottom="60dp"-->
                <!--android:id="@+id/contentPanel"></FrameLayout>-->

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:src="@drawable/icon"
                android:textAlignment="center" />

            <Fonts.LatoBLack
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:shadowColor="#050505"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:textStyle="bold"
                android:text="@string/tv_reg"
                android:textAlignment="center"
                android:textColor="#050505"
                android:textSize="30sp" />

            <Fonts.LatoBLack
                android:id="@+id/tv_reg_name"
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_reg_name_hint"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_reg_name"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/space_4"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_5"
                android:background="@drawable/xml_textbox_bg"
                android:ems="10"
                android:inputType="text" />

            <Fonts.LatoBLack
                android:id="@+id/tv_reg_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:layout_marginTop="@dimen/space_10"
                android:text="@string/tv_login_email"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_4"
                android:textSize="14sp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/xml_textbox_bg"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <Fonts.LatoBLack
                android:textColor="#000"
                android:id="@+id/tv_reg_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/et_login_phone_hint"
                android:textSize="14sp"
                android:layout_marginTop="@dimen/space_10"/>

            <EditText
                android:layout_marginTop="@dimen/space_4"
                android:textSize="14sp"
                android:id="@+id/et_reg_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_10"
                android:background="@drawable/xml_textbox_bg"
                android:ems="10"
                android:inputType="phone"
                android:maxLength="15" />

            <!--<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/tv_reg_note"
                android:textSize="14sp" />-->

            <!--<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Society/Flat(Optional)"
                android:textSize="14dp"
                android:id="@+id/textView4" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Choose Society..."
                android:background="@drawable/xml_textbox_bg"
                android:id="@+id/txtSocity"
                android:layout_marginBottom="5dp"
                android:drawableRight="@mipmap/ic_next"
                android:gravity="left|center_vertical"
                android:padding="10dp"/>-->
            <Fonts.LatoBLack
                android:id="@+id/tv_add_adres_socity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_reg_socity"
                android:textColor="#000"
                android:textSize="14sp" />

            <Fonts.LatoBLack
                android:id="@+id/btn_add_adres_socity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="@dimen/space_4"
                android:background="@drawable/xml_textbox_bg"
                android:drawableEnd="@drawable/arrow_right"
                android:drawableRight="@drawable/arrow_right"
                android:gravity="start|center_vertical"
                android:text="@string/btn_reg_socity_choose"
                android:textColor="#000"
                android:textSize="@dimen/space_14" />
            <Fonts.LatoBLack
                android:id="@+id/tv_alamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Alamat Lengkap (Wajib)"
                android:textColor="#000"
                android:textSize="14sp" />
            <EditText
                android:id="@+id/et_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_4"
                android:layout_marginBottom="@dimen/space_5"
                android:background="@drawable/xml_textbox_bg"
                android:drawableLeft="@drawable/maps"
                android:focusable = "false"
                android:hint="Lokasi Anda"
                android:focusableInTouchMode = "false"
                android:ems="10"
                android:inputType="text"
                android:textSize="@dimen/space_14" />

            <Fonts.LatoBLack
                android:textColor="#000"
                android:id="@+id/tv_reg_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_login_password"
                android:textSize="14sp" />

            <EditText
                android:textSize="14sp"
                android:layout_marginTop="@dimen/space_4"
                android:id="@+id/et_reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/xml_textbox_bg"
                android:inputType="textPassword"
                android:maxLength="10"
                android:ems="10"/>

            <RelativeLayout
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="12dp"
                android:background="@drawable/bg_rounded_button"
                android:padding="12dp">

                <Fonts.LatoBLack
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="Register"
                    android:textColor="#fff"
                    android:textSize="@dimen/text_size_small"/>


            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
