<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space_10">

            <Fonts.LatoBLack
                android:id="@+id/tv_add_adres_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nama Penerima"
                android:textColor="#000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_add_adres_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_5"
                android:layout_marginTop="@dimen/space_4"
                android:background="@drawable/xml_textbox_bg"
                android:ems="10"
                android:inputType="text"
                android:textSize="14sp" />

            <Fonts.LatoBLack
                android:id="@+id/tv_add_adres_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No. Telp"
                android:textColor="#000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_add_adres_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_5"
                android:layout_marginTop="@dimen/space_4"
                android:background="@drawable/xml_textbox_bg"
                android:ems="10"
                android:inputType="number"
                android:maxLength="15"
                android:textSize="@dimen/space_14" />

            <Fonts.LatoBLack
                android:id="@+id/tv_add_adres_pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_reg_pincode"
                android:textColor="#000"
                android:visibility="gone"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_add_adres_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_5"
                android:layout_marginTop="@dimen/space_4"
                android:background="@drawable/xml_textbox_bg"
                android:ems="10"
                android:hint="12345"
                android:textColor="#000"
                android:textColorHint="#000"
                android:visibility="gone"
                android:textSize="@dimen/space_14" />

            <Fonts.LatoBLack
                android:id="@+id/tv_add_adres_socity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_reg_socity"
                android:textColor="#000"
                android:textSize="14sp" />

            <Fonts.LatoBLack
                android:id="@+id/btn_add_adres_socity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="@dimen/space_4"
                android:background="@drawable/xml_textbox_bg"
                android:drawableEnd="@drawable/arrow_right"
                android:drawableRight="@drawable/arrow_right"
                android:gravity="start|center_vertical"
                android:text="@string/btn_reg_socity_choose"
                android:textColor="#000"
                android:textSize="@dimen/space_14" />

            <Fonts.LatoBLack
                android:id="@+id/tv_add_adres_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_reg_house"
                android:textColor="#000"
                android:visibility="gone"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_add_adres_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_5"
                android:visibility="gone"
                android:layout_marginTop="@dimen/space_4"
                android:background="@drawable/xml_textbox_bg"
                android:inputType="text"
                android:textSize="@dimen/space_14" />
            <Fonts.LatoBLack
                android:id="@+id/tv_alamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Alamat Lengkap"
                android:textColor="#000"
                android:textSize="14sp" />


            <EditText
                android:id="@+id/et_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_4"
                android:layout_marginBottom="@dimen/space_5"
                android:background="@drawable/xml_textbox_bg"
                android:drawableLeft="@drawable/maps"
                android:focusable = "false"
                android:hint="Lokasi Anda"
                android:focusableInTouchMode = "false"
                android:ems="10"
                android:inputType="text"
                android:textSize="@dimen/space_14" />

            <RelativeLayout
                android:id="@+id/btn_add_adres_edit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="12dp"
                android:background="@drawable/bg_rounded_button_merah"
                android:padding="12dp">

                <Fonts.LatoBLack
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="Tambah Alamat Pengiriman"
                    android:textColor="#fff"
                    android:textSize="@dimen/text_size_small" />


            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>