<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.belanjan.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:id="@+id/loginImage"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
           android:src="@drawable/shapes"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:src="@drawable/icon"
            android:textAlignment="center" />

        <Fonts.LatoBLack
            android:id="@+id/tv_login_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:text="@string/tv_login_email"
            android:textColor="#000"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4"
            android:background="@drawable/xml_textbox_bg"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="textEmailAddress"
            android:padding="@dimen/space_10"
            android:textAlignment="center"
            android:textColor="#000"
            android:textColorHint="@color/dark_gray"
            android:textSize="14sp" />

        <Fonts.LatoBLack
            android:id="@+id/tv_login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:text="@string/tv_login_password"
            android:textColor="#000"
            android:textSize="14sp" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                android:id="@+id/et_login_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_10"
                android:layout_marginTop="@dimen/space_4"
                android:background="@drawable/xml_textbox_bg"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPassword"
                android:maxLength="10"
                android:padding="@dimen/space_10"
                android:textAlignment="center"
                android:textColor="#000"
                android:textColorHint="@color/dark_gray"
                app:drawable_hide="@drawable/eye_hide"
                app:drawable_show="@drawable/eye_show"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <!--<android.support.v7.widget.AppCompatCheckBox-->
            <!--android:id="@+id/checkbox"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Show Password" />-->

        <RelativeLayout
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="12dp"
            android:background="@drawable/bg_rounded_button"
            android:padding="12dp">

            <Fonts.LatoBLack
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Continue"
                android:textColor="#fff"
                android:textSize="@dimen/text_size_small" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="12dp"
            android:background="@drawable/bg_rounded_button"
            android:padding="12dp">

            <Fonts.LatoBLack
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Register"
                android:textColor="#fff"
                android:textSize="@dimen/text_size_small" />


        </RelativeLayout>

        <Fonts.LatoBLack
            android:id="@+id/btnForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/forgot"
            android:textColor="@color/green"
            android:textSize="13sp" />
    </LinearLayout>

</RelativeLayout>
